# scarlet-ui

./: .gitignore  Cargo.toml  README.md  flake.nix
.sisyphus/plans/: layer-tree-allocation-free.md
crates/scarlet-ui/: Cargo.toml  README.md  VIEWEXT_USAGE.md
crates/scarlet-ui-core/: Cargo.toml  README.md
crates/scarlet-ui-core/src/: application.rs  buffer.rs  command.rs  compositor.rs  debug.rs  error.rs  geometry.rs  graphics.rs  lib.rs  menu_model.rs  os.rs  preview.rs  renderer.rs  scene.rs  state.rs  view.rs
crates/scarlet-ui-core/src/color/: base.rs  mod.rs  palette.rs  scheme.rs  semantic.rs  system.rs
crates/scarlet-ui-core/src/element/: component.rs  dirty.rs  element.rs  focus.rs  hstack.rs  id.rs  mod.rs  render.rs  tree.rs  vstack.rs
crates/scarlet-ui-core/src/event/: dispatcher.rs  gesture.rs  mod.rs
crates/scarlet-ui-core/src/macros/: mod.rs
crates/scarlet-ui-core/src/pipeline/: layers.rs  mod.rs  owner.rs  registry.rs  rendering.rs
crates/scarlet-ui-core/src/platform/: mod.rs
crates/scarlet-ui-core/src/render/: mod.rs  tree.rs
crates/scarlet-ui-core/src/testing/: alloc_counter.rs  mod.rs
crates/scarlet-ui-core/src/views/: button.rs  canvas.rs  divider.rs  either.rs  image.rs  lazy_vstack.rs  mod.rs  progress.rs  rectangle.rs  scroll.rs  select.rs  slider.rs  spacer.rs  split.rs  tab.rs  text.rs  text_field.rs  text_grid.rs  text_grid_boxdraw.rs  toggle.rs  window.rs
crates/scarlet-ui-core/src/views/containers/: hstack.rs  mod.rs  tests.rs  vstack.rs  zstack.rs
crates/scarlet-ui-core/src/views/menu/: menu.rs  menu_bar.rs  menu_item.rs  mod.rs
crates/scarlet-ui-core/src/views/modifiers/: alignment.rs  background.rs  border.rs  clip.rs  events.rs  frame.rs  mod.rs  padding.rs  repaint_boundary.rs  size.rs
crates/scarlet-ui-core/src/views/navigation/: link.rs  mod.rs  render.rs  tuple.rs  view.rs  view_impl.rs
crates/scarlet-ui-core/src/views/text_view/: document.rs  editing.rs  layout.rs  mod.rs  paint.rs  selection.rs  tests.rs
crates/scarlet-ui-macros/: Cargo.toml
crates/scarlet-ui-macros/src/: lib.rs
crates/scarlet-ui-platform-sws/: Cargo.toml  README.md
crates/scarlet-ui-platform-sws/src/: lib.rs
crates/scarlet-ui-platform-winit/: Cargo.toml  README.md
crates/scarlet-ui-platform-winit/src/: lib.rs
crates/scarlet-ui-renderer-wgpu/: Cargo.toml
crates/scarlet-ui-renderer-wgpu/src/: blit.wgsl  lib.rs
crates/scarlet-ui/src/: lib.rs
crates/scarlet-ui/tests/: basic_tests.rs  dirty_flags.rs  state_api.rs
examples/preview-demo/: Cargo.toml
examples/preview-demo/src/: main.rs
examples/widget-factory/: Cargo.toml
examples/widget-factory/src/: main.rs
extensions/vscode-scarlet-ui/: README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
extensions/vscode-scarlet-ui/src/: client.ts  codeLensProvider.ts  commands.ts  config.ts  extension.ts  outputChannel.ts  previewScanner.ts  protocol.ts  serverManager.ts  statusBar.ts
tools/preview/: Cargo.toml
tools/preview/src/: build.rs  cli.rs  gpu.rs  main.rs  native.rs  rpc.rs  server.rs  watch.rs
