[workspace]
resolver = "2"
members = [
    "crates/scarlet-ui",
    "crates/scarlet-ui-core",
    "crates/scarlet-ui-macros",
    "crates/scarlet-ui-platform-sws",
    "crates/scarlet-ui-platform-winit",
    "crates/scarlet-ui-renderer-wgpu",
    "tools/preview",
    "examples/preview-demo",
    "examples/widget-factory",
]
