[package]
name = "scarlet-ui-platform-sws"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
legacy-scarlet-std = [
    "scarlet-ui-core/legacy-scarlet-std",
    "dep:scarlet-std",
    "sws-client/legacy-scarlet-std",
    "sws-protocol/legacy-scarlet-std",
]
std = ["scarlet-ui-core/std", "sws-client/std", "sws-protocol/std"]

[dependencies]
scarlet-ui-core = { path = "../scarlet-ui-core", default-features = false }
scarlet-std = { path = "../../../Scarlet/user/lib/std", optional = true }
sws-client = { path = "../../../Scarlet/user/lib/sws-client", default-features = false }
sws-protocol = { path = "../../../Scarlet/user/lib/sws-protocol", default-features = false }

[lib]
name = "scarlet_ui_platform_sws"
path = "src/lib.rs"
