[package]
name = "scarlet-ui-platform-sws"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
legacy-scarlet-std = [
    "scarlet-ui-core/legacy-scarlet-std",
    "dep:scarlet-std",
    "sws-client/legacy-scarlet-std",
    "sws-protocol/legacy-scarlet-std",
]
std = ["scarlet-ui-core/std", "sws-client/std", "sws-protocol/std"]

[dependencies]
scarlet-ui-core = { path = "../scarlet-ui-core", default-features = false }
scarlet-std = { git = "https://github.com/petitstrawberry/Scarlet", branch = "dev", package = "scarlet-std", optional = true }
sws-client = { git = "https://github.com/petitstrawberry/Scarlet", branch = "dev", package = "sws-client", default-features = false }
sws-protocol = { git = "https://github.com/petitstrawberry/Scarlet", branch = "dev", package = "sws-protocol", default-features = false }

[lib]
name = "scarlet_ui_platform_sws"
path = "src/lib.rs"
