[package]
name = "scarlet-ui-renderer-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
scarlet-ui-core = { path = "../scarlet-ui-core", default-features = false, features = ["std"] }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
raw-window-handle = "0.6"

[lib]
name = "scarlet_ui_renderer_wgpu"
path = "src/lib.rs"
