[package]
name = "scarlet-ui"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "platform-sws"]
legacy-scarlet-std = [
    "scarlet-ui-core/legacy-scarlet-std",
    "scarlet-ui-platform-sws?/legacy-scarlet-std",
]
std = ["scarlet-ui-core/std", "scarlet-ui-platform-sws?/std", "scarlet-ui-platform-winit?/std"]
platform-sws = ["dep:scarlet-ui-platform-sws"]
platform-winit = ["std", "dep:scarlet-ui-platform-winit"]
preview = ["std", "scarlet-ui-core/preview"]

[dependencies]
scarlet-ui-core = { path = "../scarlet-ui-core", default-features = false }
scarlet-ui-platform-sws = { path = "../scarlet-ui-platform-sws", default-features = false, optional = true }
scarlet-ui-platform-winit = { path = "../scarlet-ui-platform-winit", default-features = false, optional = true }

[dev-dependencies]
# For additional testing
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["derive"] }

[lib]
name = "scarlet_ui"
path = "src/lib.rs"
