[package]
name = "scarlet-ui-preview-demo"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
path = "src/main.rs"

[features]
preview = []

[dependencies]
scarlet-ui = { path = "../../crates/scarlet-ui", default-features = false, features = ["std", "platform-winit", "preview"] }
scarlet-ui-macros = { path = "../../crates/scarlet-ui-macros" }
