[package]
name = "scarlet-ui-preview"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
scarlet-ui = { path = "../../crates/scarlet-ui", default-features = false, features = ["std", "platform-winit", "preview"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
